[tool.poetry]
name = "airthings"
version = "0.0.1"
description = "Airthings API"
authors = ["Simon Berger <simon@siku2.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
pytest-asyncio = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
